--- a/Human-Benchmark/Views/RedView.xaml
+++ b/Human-Benchmark/Views/RedView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Human_Benchmark.Views"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        
+    <Grid Background="Red">
+        <Label></Label>
     </Grid>
 </UserControl>
