--- a/Human-Benchmark/Views/TotalResultView.xaml
+++ b/Human-Benchmark/Views/TotalResultView.xaml
@@ -3,17 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:Human_Benchmark.Views"
+        xmlns:vm="clr-namespace:Human_Benchmark.ViewModels"
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         WindowStyle="None"
+        d:DataContext="{d:DesignInstance Type=vm:TotalResultViewModel, IsDesignTimeCreatable=False}"
         Title="TotalResultView" Height="400" Width="400">
         <Grid Background="#F3F3F3">
             <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
                 <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="40" />
             </Grid.RowDefinitions>
             
             <Grid Row="0">
@@ -29,11 +29,170 @@
                            Content="{md:PackIcon Kind=BookmarkOutline, Size=25}" />
                     
                     <TextBlock Grid.Column="1"
+                               FontSize="20"
+                               Margin="0 3 0 0"
                                Text="Reaction Time Test" />
                     
-                    <Label Grid.Column="3" 
-                           Content="{md:PackIcon Kind=Close}" />
+                    <Button Grid.Column="3" 
+                           Margin="5 0"
+                           Command="{Binding CloseCommand}"
+                           Content="{md:PackIcon Kind=Close, Size=18}">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Style.Setters>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="Button">
+                                                    <Label Margin="5 0"
+                                                           VerticalAlignment="Center"
+                                                           Foreground="{TemplateBinding Foreground}"
+                                                           Content="{TemplateBinding Content}" />
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                    
+                                    <Setter Property="Foreground" Value="#7F7F7F" />
+                                </Style.Setters>
+                            
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Foreground" Value="Black" />
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+                    </Button>
                 </Grid>
+            </Grid>
+            
+            <Border Grid.Row="1"
+                    BorderBrush="#E0E0E0"
+                    BorderThickness="0 1.5">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    
+                    <StackPanel Grid.Row="0"
+                                Orientation="Horizontal">
+                        <Label Content="{md:PackIcon Kind=ArrowRight, Size=18}"
+                               Margin="10 3 0 0"
+                               VerticalAlignment="Center" />
+                        <Label Content="Score" 
+                               VerticalAlignment="Center"
+                               FontSize="18" />
+                    </StackPanel>
+                    
+                    <Border Grid.Row="1"
+                            Margin="60 20"
+                            BorderThickness="0 0 1 1"
+                            BorderBrush="Black">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            
+                            <Border Grid.Row="0" Grid.Column="0" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <TextBlock Text="Test Number" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+                            <Border Grid.Row="0" Grid.Column="1" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <TextBlock Text="Reaction Time" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+
+                            <Border Grid.Row="1" Grid.Column="0" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <TextBlock Text="1" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+                            <Border Grid.Row="1" Grid.Column="1" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <Label FontWeight="Bold" Content="{Binding TotalResults[0]}" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0"/>
+                            </Border>
+
+                            <Border Grid.Row="2" Grid.Column="0" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <TextBlock Text="2" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+                            <Border Grid.Row="2" Grid.Column="1" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <Label FontWeight="Bold" Content="{Binding TotalResults[1]}" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0"/>
+                            </Border>
+
+                            <Border Grid.Row="3" Grid.Column="0" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <TextBlock Text="3" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+                            <Border Grid.Row="3" Grid.Column="1" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <Label FontWeight="Bold" Content="{Binding TotalResults[2]}" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0"/>
+                            </Border>
+
+                            <Border Grid.Row="4" Grid.Column="0" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <TextBlock Text="4" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+                            <Border Grid.Row="4" Grid.Column="1" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <Label FontWeight="Bold" Content="{Binding TotalResults[3]}" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0"/>
+                            </Border>
+
+                            <Border Grid.Row="5" Grid.Column="0" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <TextBlock Text="5" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+                            <Border Grid.Row="5" Grid.Column="1" BorderBrush="Black" BorderThickness="1 1 0 0">
+                                <Label FontWeight="Bold" Content="{Binding TotalResults[4]}" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0"/>
+                            </Border>
+
+                            <Border Grid.Row="6" Grid.Column="0" BorderBrush="Black" BorderThickness="1 1 0 0" Background="LightGray">
+                                <TextBlock FontWeight="Bold" Text="AVG." VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10"/>
+                            </Border>
+                            <Border Grid.Row="6" Grid.Column="1" BorderBrush="Black" BorderThickness="1 1 0 0" Background="LightGray">
+                                <Label FontWeight="Bold" Content="{Binding AvgResult}" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0"/>
+                            </Border>
+                        </Grid>
+                    </Border>
+                </Grid>
+            </Border>
+            
+            <Grid Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="1"
+                        Margin="10 5"
+                        Command="{Binding CloseCommand}"
+                        Content="Close">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Style.Setters>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="Button">
+                                            <Border CornerRadius="5"
+                                                    Background="{TemplateBinding Background}">
+                                                <Label Margin="10 0"
+                                                       VerticalAlignment="Center"
+                                                       Content="{TemplateBinding Content}" />
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                
+                                <Setter Property="Background" Value="#F3F3F3" />
+                            </Style.Setters>
+                            
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#E3E3E3" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
             </Grid>
         </Grid>
 </Window>
